[project]
name = "ai-content-brief-generator"
version = "0.1.0"
description = "Streamlit app to generate AI content briefs and SEO outlines using Groq Llama models."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.59.2",
    "groq>=0.0.1",
]

[tool.uv]
package = false
